--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/vite": "^4.1.13",
     "astro": "^5.13.5",
+    "pretendard": "^1.3.9",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.13",
