--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@astrojs/react": "^4.3.0",
     "@lucide/astro": "^0.542.0",
+    "@nanostores/react": "^1.0.0",
     "@react-three/drei": "^10.7.4",
     "@react-three/fiber": "^9.3.0",
     "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/vite": "^4.1.13",
     "astro": "^5.13.5",
+    "lucide-react": "^0.544.0",
+    "nanostores": "^1.0.1",
     "pretendard": "^1.3.9",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
